force-app/main/default/objects/Milestone__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>For project delay tracking</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>