force-app/main/default/objects/Milestone__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>When stage began</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>